<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CMPE277_Assignement1</string>

    <string name="lifecycle_method_list">Lifecycle Method List</string>
    <string name="activity_status">Activity Status</string>
    <string name="dialog_text">Simple Dialog</string>


    <string name="activity_a">Activity A</string>
    <string name="activity_b">Activity B</string>


    <string name="btn_start_b_label">Start Activity B</string>
    <string name="btn_start_dialog_label">Dialog</string>
    <string name="btn_finish_b_label">Finish B</string>
    <string name="btn_close_app">Close App</string>

    <string name="activity_b_text">Activity B occupies the complete window real-estate. The Android OS forces Activity A to be Paused. However, the background thread keep incrementing the counter...</string>
    <string name="btn_finish_dialog_label">Close</string>
    <string name="close">Close</string>
    <string name="dialog">Dialog</string>

    <string name="thread_count">Threads Count:</string>
    <string name="bundle_count">Bundles Count:</string>
</resources>
