<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:padding="8dip"
    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:id="@+id/layout_title"
        >
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_b"
            android:textSize="@dimen/font_large"
            android:textColor="@color/white"
            android:layout_toRightOf="@id/imageView1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/activity_b_text"
        android:textSize="@dimen/font_medium"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/light_green"
        android:layout_marginTop="30dp"/>
    <Button
        android:id="@+id/btn_close_app"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:layout_marginTop="100dp"
        android:text="@string/btn_finish_b_label"
        android:textAllCaps="false"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@color/light_black"
        android:padding="20dp"
        android:textColor="@color/white"
        android:onClick="finishB"
        />
</LinearLayout>

